webapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    spec:
      containers:
        - image: quay.io/pbartczak/flask-app:v1.2
          name: flask-app
