webapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
