webapp/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp-route
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
